--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,17 @@ r_github_packages:
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       language: r
       r: release
 
     - os: linux
-      dist: trusty
+      dist: xenial
       language: r
       r: devel
       
     - os: osx
-      osx_image: xcode8
+      osx_image: xcode8.3
       language: r
       r: release
 
