--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ cache: packages
 
 sudo: false
 
-r_github_packages:
-  - r-lib/covr
+#r_github_packages:
+#  - r-lib/covr
 
 matrix:
   include:
@@ -52,8 +52,8 @@ matrix:
 #  allow_failures:
 #    - r: devel
 
-after_success:
-  - Rscript -e 'covr::codecov()'
+#after_success:
+#  - Rscript -e 'covr::codecov()'
 
 warnings_are_errors: false
 
