more progress; split into 2 tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
       "program": "${workspaceFolder}/src/python/test1",
       "args": ["op", "sub", "3", "3"],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
+      "cwd": "${workspaceFolder}/src/python",
+      "environment": [{"Name": "PYTHONPATH", "Value": "."}],
       "externalConsole": true,
       "MIMode": "gdb",
       "setupCommands": [
