--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,24 @@ cache: packages
 
 sudo: false
 
-# matrix:
-#   include:
-#     - language: node_js
-#       node_js:
-#       - "8"
+matrix:
+  include:
+    - language: node_js
+       node_js:
+       - "8"
 
-language: C++
-before_install: 
- - sudo apt-get update
- - sudo apt-get -y install python3
-script: cd src/python && make && make test
+    - language: C++
+      before_install: 
+      - sudo apt-get update
+      - sudo apt-get -y install python3
+      script: cd src/python && make && make test
 
+    - language: python
+      python: 3.6
+      before_install: 
+        - python3 -m pip install numpy pandas
+      script:
+        - cd src/python && make && make test
 
 #  allow_failures:
 #    - r: devel
