--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ matrix:
     - language: C++
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install python3 python3-pip
+      - sudo apt-get -y install build-essential python3 python3-pip
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
-      - python3 -m pip install numpy pandas --upgrade --ignore-installed
+      - python3 -m pip install numpy pandas
       - cd src/python && make && make test
 
     - language: python
