--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
     - language: C++
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-pip
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
       - python3 -m pip install numpy pandas
@@ -23,7 +23,7 @@ matrix:
       python: 3.6
 #      before_install: 
       script:
-      - python3 -m pip install numpy pandas --upgrade --ignore-installed
+      - python3 -m pip install numpy pandas #--upgrade --ignore-installed
       - cd src/python && make && make test
 
 #  allow_failures:
