--- a/.travis.yml
+++ b/.travis.yml
@@ -10,21 +10,21 @@ matrix:
       node_js:
       - "8"
 
-    - language: C++
-      before_install: 
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
-      script: 
-#      - python3 -m pip install numpy pandas --upgrade --ignore-installed
-      - python3 -m pip install numpy pandas
-      - cd src/python && make && make test
+#     - language: C++
+#       before_install: 
+#       - sudo apt-get update
+#       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
+#       script: 
+# #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
+#       - python3 -m pip install numpy pandas
+#       - cd src/python && make && make test
 
     - language: python
       python: 3.6
 #      before_install: 
       script:
       - python3 -m pip install numpy pandas #--upgrade --ignore-installed
-      - cd src/python && make && make test
+      - cd src/python && make PYVER=3.6 && make test
 
 #  allow_failures:
 #    - r: devel
