--- a/src/python/Makefile
+++ b/src/python/Makefile
@@ -1,8 +1,10 @@
+# override to force a specific python3 version
+PYVER=3
 
 # Query python env for compile and link settings
-CXXFLAGS = $(shell python3-config --cflags) -I$(shell python3 -c "import numpy;print(numpy.get_include())")
+CXXFLAGS = $(shell python$(PYVER)-config --cflags) -I$(shell python$(PYVER) -c "import numpy;print(numpy.get_include())")
 CXXFLAGS += -fPIC -std=c++11 -DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION
-LDFLAGS := $(shell python3-config --ldflags)
+LDFLAGS := $(shell python$(PYVER)-config --ldflags)
 
 src=$(wildcard *.cpp)
 obj=$(src:.cpp=.o)
