--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 
-
 cache: packages
 
 sudo: true
@@ -10,24 +9,23 @@ matrix:
       node_js:
       - "8"
 
-#     - language: C++
-#       before_install: 
-#       - sudo apt-get update
-#       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
-#       script: 
-# #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
-#       - python3 -m pip install numpy pandas
-#       - cd src/python && make && make test
+    - language: c++
+      before_install: 
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
+      script: 
+#      - python3 -m pip install numpy pandas --upgrade --ignore-installed
+      - python3 -m pip install numpy pandas
+      - cd src/python && make && make test
 
     - language: python
       python: 3.4
-#      before_install: 
       script:
-      - python3 -m pip install numpy pandas #--upgrade --ignore-installed
+      - python3 -m pip install numpy pandas 
       - cd src/python && make PYVER=3.4 && make test
 
-#  allow_failures:
-#    - r: devel
+  allow_failures:
+    - c++
 
 #after_success:
 #  - Rscript -e 'covr::codecov()'
