--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       node_js:
       - "8"
 
-    - language: c++
+    - name: native_cpp
       before_install: 
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
@@ -25,7 +25,7 @@ matrix:
       - cd src/python && make PYVER=3.4 && make test
 
   allow_failures:
-    - c++
+    - name: native_cpp
 
 #after_success:
 #  - Rscript -e 'covr::codecov()'
