--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,11 @@
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/src/python/test1",
+      "program": "${workspaceFolder}/src/bin/neworder",
       "args": ["op", "sub", "3", "3"],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/src/python",
-      "environment": [{"Name": "PYTHONPATH", "Value": "."}],
+      "cwd": "${workspaceFolder}",
+      "environment": [{"Name": "PYTHONPATH", "Value": "example"}, {"Name": "LD_LIBRARY_PATH", "Value": "src/lib"}],
       "externalConsole": true,
       "MIMode": "gdb",
       "setupCommands": [
