--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -8,7 +8,7 @@ dep=$(src:.cpp=.d)
 $(info $(CXXFLAGS))
 $(info $(LDFLAGS))
 
-all: testharness
+all: test
 
 testharness: $(obj)
 	$(CXX) -o $@ $^ $(LDFLAGS) -L ../lib -lneworder
