--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
     - language: python
       python: 3.4
       script:
+      - sudo apt install libboost-python libboost-numpy
       - python3 -m pip install numpy pandas 
       - make PYVER=3.4 && make PYVER=3.4 test
 
