--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 
 cache: packages
 
@@ -19,11 +20,11 @@ matrix:
       - make && make test
 
     - language: python
-      python: 3.4
+      python: 3.5
       script:
       - sudo apt install libboost-python-dev libboost-numpy-dev
       - python3 -m pip install numpy pandas 
-      - make PYVER=3.4 && make PYVER=3.4 test
+      - make PYVER=3.5 && make PYVER=3.5 test
 
   allow_failures:
     - name: native_cpp
