--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -1,7 +1,8 @@
 
 CXXFLAGS += -I../lib
 
-LDFLAGS += -lboost_python3 -lboost_numpy3-py36
+LDFLAGS +=  -l$(BOOST_PYTHON_LIB) 
+#-lboost_numpy3-py36
 
 src=$(wildcard *.cpp)
 obj=$(src:.cpp=.o)
