--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ matrix:
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
-      - python3 -m pip install numpy pandas
+      - python3 -m pip install -U numpy pandas
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 test
 
     - language: python
       python: 3.5
       script:
       - sudo apt install libboost-python-dev
-      - python3 -m pip install numpy pandas 
+      - python3 -m pip install -U numpy pandas 
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 test
 
   allow_failures:
