--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
     - name: native_cpp
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
       - python3 -m pip install -U numpy pandas
