expose some std::vectors to python etc

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -9,7 +9,7 @@ libneworder.so: $(obj)
 	$(CXX) -shared -o $@ $^ $(LDFLAGS)
 
 %.d: %.cpp
-	$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
+	@$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
 
 -include $(dep)
 
