--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,19 @@
     "type_traits": "cpp",
     "tuple": "cpp",
     "typeinfo": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "cstring": "cpp",
+    "atomic": "cpp",
+    "bitset": "cpp",
+    "cinttypes": "cpp",
+    "deque": "cpp",
+    "functional": "cpp",
+    "algorithm": "cpp",
+    "*.gen": "cpp",
+    "strstream": "cpp",
+    "complex": "cpp",
+    "list": "cpp",
+    "iomanip": "cpp",
+    "typeindex": "cpp"
   }
 }
