--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/src/bin/neworder",
-      "args": ["op", "sub", "3", "3"],
+      "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [{"Name": "PYTHONPATH", "Value": "example"}, {"Name": "LD_LIBRARY_PATH", "Value": "src/lib"}],
