--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,26 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "name": "(gdb) Test",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/test/testharness",
+      "args": ["module.py"],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}/src/test",
+      "environment": [{"Name": "PYTHONPATH", "Value": "."}, {"Name": "LD_LIBRARY_PATH", "Value": "../lib"}],
+      "externalConsole": true,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
+
   ]
 }
