Start on MPI #2

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -1,12 +1,13 @@
 
 CXXFLAGS += -I../lib
 
-src=$(wildcard *.cpp)
+src=main.cpp run.cpp
 obj=$(src:.cpp=.o)
 dep=$(src:.cpp=.d)
 
 #$(info $(CXXFLAGS))
 #$(info $(LDFLAGS))
+MPICXX=mpicxx
 
 LDFLAGS += -l$(BOOST_PYTHON_LIB)
 
@@ -14,6 +15,9 @@ all: neworder
 
 neworder: $(obj)
 	$(CXX) -o $@ $^ $(LDFLAGS) -L ../lib -lneworder
+
+neworder_mpi: mpi_main.cpp run.cpp MPIResource.h
+	$(MPICXX) $(CXXFLAGS) -o $@ mpi_main.cpp run.cpp $(LDFLAGS) -L ../lib -lneworder
 
 %.d: %.cpp
 	@$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
