--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -1,9 +1,11 @@
 
-CXXFLAGS += -I../lib
+CXXFLAGS += -I../lib -I../include
 
 src=main.cpp run.cpp
 obj=$(src:.cpp=.o)
 dep=$(src:.cpp=.d)
+
+mpi_src=mpi_main.cpp run.cpp MPIResource.cpp
 
 #$(info $(CXXFLAGS))
 #$(info $(LDFLAGS))
@@ -16,8 +18,8 @@ all: neworder
 neworder: $(obj)
 	$(CXX) -o $@ $^ $(LDFLAGS) -L ../lib -lneworder
 
-neworder_mpi: mpi_main.cpp run.cpp MPIResource.h
-	$(MPICXX) $(CXXFLAGS) -o $@ mpi_main.cpp run.cpp $(LDFLAGS) -L ../lib -lneworder
+neworder_mpi: $(mpi_src)
+	$(MPICXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -L ../lib -lneworder
 
 %.d: %.cpp
 	@$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
@@ -27,4 +29,4 @@ neworder_mpi: mpi_main.cpp run.cpp MPIResource.h
 clean:
 	rm -rf $(dep) $(obj) test
 
-.PHONY: clean 
+.PHONY: clean
