tweaks for HPC build/run

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -23,7 +23,7 @@ testharness: $(obj)
 
 #TODO $(shell ls ../../tests/*.py) ... then strip .py
 test: testharness
-	PYTHONPATH=.:../../tests LD_LIBRARY_PATH=../lib ./testharness module
+	PYTHONPATH=.:../../tests LD_LIBRARY_PATH=../lib:$(LD_LIBRARY_PATH) ./testharness module
 
 clean:
 	rm -rf $(dep) $(obj) test
