--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,20 @@ matrix:
     - language: python
       python: 3.5
       script:
-      - sudo apt install libboost-python-dev
+      - sudo apt install python3-dev libboost-python-dev
       - python3 -m pip install -U numpy pandas 
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 test
 
+    - language: python
+      python: 3.6
+      script:
+      - sudo apt install python3-dev libboost-python-dev
+      - python3 -m pip install -U numpy pandas 
+      - make && make test
+
   allow_failures:
     - python: 3.5
+    - python: 3.6
 
 #after_success:
 #  - Rscript -e 'covr::codecov()'
