doc and examples updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,11 @@
     "list": "cpp",
     "iomanip": "cpp",
     "typeindex": "cpp"
-  }
+  },
+  "spellright.language": "en_GB",
+  "spellright.documentTypes": [
+    "markdown",
+    "latex",
+    "plaintext"
+  ]
 }
