tweak make logic; complete first cut of multisim #8

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,8 @@
     "complex": "cpp",
     "list": "cpp",
     "iomanip": "cpp",
-    "typeindex": "cpp"
+    "typeindex": "cpp",
+    "random": "cpp"
   },
   "spellright.language": "en_GB",
   "spellright.documentTypes": [
