have another go at boost numpy

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -1,8 +1,7 @@
 
 CXXFLAGS += -I../include -I../lib
 
-LDFLAGS +=  -l$(BOOST_PYTHON_LIB) 
-#-lboost_numpy3-py36
+LDFLAGS +=  -l$(BOOST_PYTHON_LIB) -lboost_numpy3-py36
 
 #$(info $(CXXFLAGS))
 #$(info $(LDFLAGS))
