--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ jobs:
       - image: debian:stretch
     steps:
       - checkout
-      # - run:
-      #     name: install packages
-      #     command: sudo apt-get update && sudo apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev libboost-numpy-dev
+      - run:
+          name: install packages
+          command: apt-get update && apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev libboost-numpy-dev
       - run:
           name: Greeting
           command: g++ -dumpversion.
