--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: apt-get update && apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev #libboost-numpy-dev
       - run:
           name: Greeting
-          command: g++ -dumpversion.
+          command: g++ --version.
       - run:
           name: python 
           command: python3 --version 
