--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
 
     - name: native_cpp
       before_install: 
+      - sudo apt-cache search libboost
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev libboost-numpy-dev
       script: 
