--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ matrix:
       before_install: 
       - sudo apt-cache search libboost
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev #libboost-numpy-dev
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip #libboost-python-dev libboost-numpy-dev
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
       - python3 -m pip install -U numpy pandas
+      - tools/boost_python.sh
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 test
 
     - language: python
