--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
       script: 
 #      - python3 -m pip install numpy pandas --upgrade --ignore-installed
       - python3 -m pip install -U numpy pandas
-      - tools/boost_python.sh
+      - sudo tools/boost_python.sh
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python-py35 test
 
     - language: python
