--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,13 @@ matrix:
 
     - name: native_cpp
       before_install: 
-      - sudo apt-cache search libboost
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip #libboost-python-dev libboost-numpy-dev
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip 
       script: 
-#      - python3 -m pip install numpy pandas --upgrade --ignore-installed
       - python3 -m pip install -U numpy pandas
       - sudo tools/boost_python.sh
-      - export PYVER=3.5
-      - export BOOST_PYTHON_LIB=boost_python35 
-      - export BOOST_NUMPY_LIB=boost_numpy35 
-      - make && make test
+      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35
+      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 test
 
     - language: python
       python: 3.5
