--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -5,7 +5,7 @@ dep=$(src:.cpp=.d)
 
 CXXFLAGS += -I../include
 
-LDFLAGS += -l$(BOOST_PYTHON_LIB)
+LDFLAGS += -l$(BOOST_PYTHON_LIB) -l$(BOOST_NUMPY_LIB)
 
 all: libneworder.so
 
