--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
       before_install: 
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich
+      - ls -al /usr/bin
       script: 
       - python3 -m pip install -U numpy pandas
       - sudo tools/boost_python.sh
