--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ matrix:
     - name: native_cpp_mpi
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich
-      - sudo find / -name "mpic++"
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
       script: 
       - python3 -m pip install -U numpy pandas
       - sudo tools/boost_python.sh
