more make int dir changes

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -1,9 +1,15 @@
 
+INTDIR=int$(SUFFIX)
+
 CXXFLAGS += -I../lib -I../include
 
 src=neworder$(SUFFIX).cpp run.cpp
-obj=$(src:.cpp=.o)
-dep=$(src:.cpp=.d)
+dep=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.d))
+obj=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.o))
+
+$(info $(dep))
+$(info $(obj))
+$(shell mkdir -p $(INTDIR))
 
 LDFLAGS += -l$(BOOST_PYTHON_LIB) -l$(BOOST_NUMPY_LIB)
 
@@ -12,8 +18,13 @@ all: neworder$(SUFFIX)
 neworder$(SUFFIX): $(obj)
 	$(CXX) -o $@ $^ $(LDFLAGS) -L ../lib -lneworder$(SUFFIX)
 
-%.d: %.cpp
-	@$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
+DEPFLAGS = -MT $@ -MD -MP -MF $(INTDIR)/$*.d
+
+$(INTDIR)/%.o: %.cpp $(INTDIR/%.d)
+	$(CXX) $(CXXFLAGS) $(DEPFLAGS) -c -o $@ $<
+
+# %.d: %.cpp
+# 	@$(CXX) $(CXXFLAGS) $< -MM -MT $(@:.d=.o) >$@
 
 -include $(dep)
 
