--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -5,17 +5,13 @@ src=$(wildcard *.cpp)
 dep=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.d))
 obj=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.o))
 
-
-#$(info $(INTDIR))
-$(info $(dep))
-$(info $(obj))
-
+#$(info $(dep))
+#$(info $(obj))
+$(shell mkdir -p $(INTDIR))
 
 CXXFLAGS += -I../include
 
 LDFLAGS += -l$(BOOST_PYTHON_LIB) -l$(BOOST_NUMPY_LIB)
-
-$(shell mkdir -p $(INTDIR))
 
 all: libneworder$(SUFFIX).so
 
@@ -25,13 +21,14 @@ libneworder$(SUFFIX).so: $(obj)
 DEPFLAGS = -MT $@ -MD -MP -MF $(INTDIR)/$*.d
 
 $(INTDIR)/%.o: %.cpp $(INTDIR/%.d)
-	$(CXX) $(CXXFLAGS) $(DEPFLAGS) -c -o $@ $^
+	$(CXX) $(CXXFLAGS) $(DEPFLAGS) -c -o $@ $<
+#-c -o $@ $^
 
 #$(INTDIR)/%.d: %.cpp
 #	$(CXX) $(CXXFLAGS) $< -MM -MT $(INTDIR)/$(@:.d=.o) >$@
 
-.PRECIOUS = $(INTDIR)/%.d
-$(INTDIR)/%.d: ;
+# .PRECIOUS = $(INTDIR)/%.d
+# $(INTDIR)/%.d: ;
 
 -include $(dep)
 
