--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS += -I../include -I../lib
 
 LDFLAGS += -l$(BOOST_PYTHON_LIB) -l$(BOOST_NUMPY_LIB)
 
-src=test1.cpp test_no.cpp test_np.cpp test_errors.cpp test$(SUFFIX).cpp
+src=$(wildcard test*.cpp) run.cpp main$(SUFFIX).cpp
 dep=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.d))
 obj=$(patsubst %,$(INTDIR)/%,$(src:.cpp=.o))
 
