--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
 
     - name: native_cpp
       before_install: 
+      - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip g++-6 
       script: 
