--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,20 @@ matrix:
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 -f MPI.mk test
 
+    # Prints out toolchain version info
+    - name: travis_env
+      before_install:
+      - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
+      script:
+      - g++ --version
+      - mpic++ --version
+      - python --version
+      - python3 -c"import numpy;print(numpy.__version__)"
+      - python3 -c"import pandas;print(pandas.__version__)"
+
+
     # - language: python
     #   python: 3.5
     #   script:
