--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ matrix:
       before_install: 
       - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip g++-6 
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script: 
       - python3 -m pip install -U numpy pandas
       - sudo tools/boost_python.sh
-      - make CXX=g++-6 PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35
+      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 test
 
@@ -39,10 +39,11 @@ matrix:
       - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
+      - python3 -m pip install -U numpy pandas
       script:
       - g++ --version
       - mpic++ --version
-      - python --version
+      - python3 --version
       - python3 -c"import numpy;print(numpy.__version__)"
       - python3 -c"import pandas;print(pandas.__version__)"
 
