--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,10 @@
     "random": "cpp",
     "string": "cpp",
     "forward_list": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "hash_map": "cpp",
+    "hash_set": "cpp",
+    "valarray": "cpp"
   },
   "spellright.language": "en_GB",
   "spellright.documentTypes": [
