fix crash plus some tidying

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
       - python3 -m pip install -U numpy pandas
       script:
       - g++ --version
-      - mpic++ --version
+      - mpirun --version
       - python3 --version
       - python3 -c"import numpy;print(numpy.__version__)"
       - python3 -c"import pandas;print(pandas.__version__)"
