refactor env: MPI rank/size

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,11 @@
     "unordered_set": "cpp",
     "hash_map": "cpp",
     "hash_set": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "csignal": "cpp",
+    "codecvt": "cpp",
+    "future": "cpp",
+    "variant": "cpp"
   },
   "spellright.language": "en_GB",
   "spellright.documentTypes": [
