--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,22 @@ matrix:
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 -f MPI.mk test
 
+    - name: cmake
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+      before_install: 
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
+      script:
+      - python3 -m pip install -U numpy pandas
+      - sudo tools/boost_python.sh
+      - mkdir -p build
+      - cd build
+      - cmake .. -DPYVER=3.5 -DBOOST_PYTHON_LIB=boost_python35 -DBOOST_NUMPY_LIB=boost_numpy35
+      - make
+
     # Prints out toolchain version info
     - name: travis_env
       before_install:
