--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ matrix:
       - "8"
 
     - name: native_cpp
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
       before_install: 
-      - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script: 
@@ -51,8 +54,11 @@ matrix:
 
     # Prints out toolchain version info
     - name: travis_env
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
       before_install:
-      - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
       - python3 -m pip install -U numpy pandas
