test first/next arrival funcs

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -27,7 +27,7 @@ $(INTDIR)/%.o: %.cpp $(INTDIR/%.d)
 
 #TODO $(shell ls ../../tests/*.py) ... then strip .py
 test: testharness$(SUFFIX)
-	PYTHONPATH=.:../../tests:$(PYTHONPATH) LD_LIBRARY_PATH=../lib:$(LD_LIBRARY_PATH) $(MPIEXEC) ./testharness$(SUFFIX) $(MPI_INDEP) module op mpi trans
+	PYTHONPATH=.:../../tests:$(PYTHONPATH) LD_LIBRARY_PATH=../lib:$(LD_LIBRARY_PATH) $(MPIEXEC) ./testharness$(SUFFIX) $(MPI_INDEP) module op mpi trans mc
 	PYTHONPATH=.:../../tests:$(PYTHONPATH) LD_LIBRARY_PATH=../lib:$(LD_LIBRARY_PATH) $(MPIEXEC) ./testharness$(SUFFIX) $(MPI_DEP) correlated
 
 clean:
