--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: install packages
-          command: apt-get update && apt-get -y install build-essential python3 python3-dev python3-pip libboost-python-dev #libboost-numpy-dev
+          command: apt-get update && apt-get -y install build-essential python3 python3-dev python3-pip
       - run:
           name: Greeting
           command: g++ --version
