--- a/.travis.yml
+++ b/.travis.yml
@@ -19,22 +19,20 @@ matrix:
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script: 
-      - python3 -m pip install -U numpy pandas
-      - sudo tools/boost_python.sh
-      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35
+      - python3 -m pip install -U numpy pandas pybind11
+      - make PYVER=3.5 
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 test
+      - make PYVER=3.5 test
 
     - name: native_cpp_mpi
       before_install: 
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
       script: 
-      - python3 -m pip install -U numpy pandas
-      - sudo tools/boost_python.sh
-      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 -f MPI.mk
+      - python3 -m pip install -U numpy pandas pybind11
+      - make PYVER=3.5 -f MPI.mk
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-      - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 BOOST_NUMPY_LIB=boost_numpy35 -f MPI.mk test
+      - make PYVER=3.5 -f MPI.mk test
 
     - name: cmake
       addons:
@@ -45,11 +43,10 @@ matrix:
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip
       script:
-      - python3 -m pip install -U numpy pandas
-      - sudo tools/boost_python.sh
+      - python3 -m pip install -U numpy pandas pybind11
       - mkdir -p build
       - cd build
-      - cmake .. -DPYVER=3.5 -DBOOST_PYTHON_LIB=boost_python35 -DBOOST_NUMPY_LIB=boost_numpy35
+      - cmake .. -DPYVER=3.5
       - make
 
     # Prints out toolchain version info
@@ -61,7 +58,7 @@ matrix:
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
-      - python3 -m pip install -U numpy pandas
+      - python3 -m pip install -U numpy pandas pybind11
       script:
       - g++ --version
       - mpirun --version
@@ -73,14 +70,14 @@ matrix:
     # - language: python
     #   python: 3.5
     #   script:
-    #   - sudo apt install python3-dev libboost-python-dev
+    #   - sudo apt install python3-dev 
     #   - python3 -m pip install -U numpy pandas 
-    #   - make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 && make PYVER=3.5 BOOST_PYTHON_LIB=boost_python35 test
+    #   - make PYVER=3.5 test
 
     # - language: python
     #   python: 3.6
     #   script:
-    #   - sudo apt install python3-dev libboost-python-dev
+    #   - sudo apt install python3-dev 
     #   - python3 -m pip install -U numpy pandas 
     #   - make && make test
 
