--- a/.travis.yml
+++ b/.travis.yml
@@ -34,20 +34,20 @@ matrix:
       - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       - make PYVER=3.5 -f MPI.mk test
 
-    - name: cmake
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain-r-test
-      before_install: 
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
-      script:
-      - python3 -m pip install -U numpy pandas pybind11
-      - mkdir -p build
-      - cd build
-      - cmake .. -DPYVER=3.5
-      - make
+    # - name: cmake
+    #   addons:
+    #     apt:
+    #       sources:
+    #       - ubuntu-toolchain-r-test
+    #   before_install: 
+    #   - sudo apt-get update
+    #   - sudo apt-get -y install build-essential python3 python3-dev python3-pip
+    #   script:
+    #   - python3 -m pip install -U numpy pandas pybind11
+    #   - mkdir -p build
+    #   - cd build
+    #   - cmake .. -DPYVER=3.5
+    #   - make
 
     # Prints out toolchain version info
     - name: travis_env
@@ -79,12 +79,11 @@ matrix:
       script:
       - sudo apt install python3-dev 
       - python3 -m pip install -U numpy pandas pybind11 
-      - make && make test
+      - ./setup.py build
 
   allow_failures:
     - python: 3.5
     - python: 3.6
-    - cmake
 
 #after_success:
 #  - Rscript -e 'covr::codecov()'
