--- a/.travis.yml
+++ b/.travis.yml
@@ -77,8 +77,11 @@ matrix:
 
     - language: python
       python: 3.6
+      before_install:
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
-      - sudo apt install python3-dev 
+      #- sudo apt install python3-dev 
       - python3 -m pip install -U numpy pandas pybind11 
       - ./setup.py build
       - ./setup.py test
