--- a/.travis.yml
+++ b/.travis.yml
@@ -81,10 +81,9 @@ matrix:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
-      #- sudo apt install python3-dev 
-      - python3 -m pip install pybind11 numpy
-      - ./setup.py build
-      - ./setup.py test
+      - pip install pybind11 numpy pandas
+      - python setup.py build
+      - python setup.py test
 
   allow_failures:
     - python: 3.5
