--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ matrix:
       script:
       - g++ --version
       - mpirun --version
+      # bit pointless as not using venv?
       - python3 --version
       - python3 -c"import numpy;print(numpy.__version__)"
       - python3 -c"import pandas;print(pandas.__version__)"
@@ -80,10 +81,11 @@ matrix:
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
-      script:
+      install:
       - pip install pybind11 numpy pandas
+      script:
       - python setup.py build
-      - python setup.py test
+      - PYTHONPATH=/home/travis/virtualenv/python3.6.7:$PYTHONPATH python setup.py test
 
   allow_failures:
     - python: 3.5
