--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,24 @@ matrix:
           - ubuntu-toolchain-r-test
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip
-      script: 
-      - python3 -m pip install -U numpy pandas pybind11
-      - make PYVER=3.5 
-      - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-      - make PYVER=3.5 test
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip python3-virtualenv
+      script:
+      - virtualenv -p python3 .venv
+      - source .venv/bin/activate
+      - pip install -U numpy pandas pybind11
+      - make && make test
+      #- export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
+      #- make test
 
-    - name: native_cpp_mpi
-      before_install: 
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
-      script: 
-      - python3 -m pip install -U numpy pandas pybind11
-      - make PYVER=3.5 -f MPI.mk
-      - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-      - make PYVER=3.5 -f MPI.mk test
+    # - name: native_cpp_mpi
+    #   before_install: 
+    #   - sudo apt-get update
+    #   - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
+    #   script: 
+    #   - python3 -m pip install -U numpy pandas pybind11
+    #   - make -f MPI.mk
+    #   - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
+    #   - make -f MPI.mk test
 
     # - name: cmake
     #   addons:
@@ -46,35 +48,33 @@ matrix:
     #   - python3 -m pip install -U numpy pandas pybind11
     #   - mkdir -p build
     #   - cd build
-    #   - cmake .. -DPYVER=3.5
+    #   - cmake .. 
     #   - make
 
-    # Prints out toolchain version info
-    - name: travis_env
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain-r-test
-      before_install:
-      - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
-      - python3 -m pip install -U numpy pandas pybind11
-      script:
-      - g++ --version
-      - mpirun --version
-      # bit pointless as not using venv?
-      - python3 --version
-      - python3 -c"import numpy;print(numpy.__version__)"
-      - python3 -c"import pandas;print(pandas.__version__)"
-
+    # # Prints out toolchain version info
+    # - name: travis_env
+    #   addons:
+    #     apt:
+    #       sources:
+    #       - ubuntu-toolchain-r-test
+    #   before_install:
+    #   - sudo apt-get update
+    #   - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
+    #   - python3 -m pip install -U numpy pandas pybind11
+    #   script:
+    #   - g++ --version
+    #   - mpirun --version
+    #   # bit pointless as not using venv?
+    #   - python3 --version
+    #   - python3 -c"import numpy;print(numpy.__version__)"
+    #   - python3 -c"import pandas;print(pandas.__version__)"
 
     - language: python
       python: 3.5
       script:
-      - sudo apt install python3-dev 
-      - python3 -m pip install -U numpy pandas pybind11 
-      - ./setup.py build
-      - ./setup.py test
+      - pip install -U numpy pandas pybind11 
+      - python setup.py build
+      - python setup.py test
 
     - language: python
       python: 3.6
@@ -84,12 +84,10 @@ matrix:
       install:
       - pip install pybind11 numpy pandas
       script:
-      - source ~/virtualenv/python3.6/bin/activate && python setup.py build
-      - source ~/virtualenv/python3.6/bin/activate && python setup.py test
+      - python setup.py build
       - ./run_example.sh hello_world
       - ./run_example.sh diagnostics
-      - python -c "import platform; print(platform.python_version())"
-      - python -c "import numpy; print(numpy.__version__)"
+      - python setup.py test
 
   allow_failures:
     - python: 3.5
