--- a/.travis.yml
+++ b/.travis.yml
@@ -6,35 +6,36 @@ sudo: true
 
 matrix:
   include:
-    # - language: node_js
-    #   node_js:
-    #   - "8"
 
-    - name: native_cpp
+    - name: venv_py35
       addons:
         apt:
           sources:
           - ubuntu-toolchain-r-test
       before_install: 
       - sudo apt-get update
-      - sudo apt-get -y install build-essential python3 python3-dev python3-pip python3-virtualenv
+      - sudo apt-get -y install build-essential python3 python3-dev python3-pip python3-virtualenv mpich libmpich-dev
       script:
       - virtualenv -p python3 .venv
       - source .venv/bin/activate
       - pip install -U numpy pandas pybind11
       - make && make test
-      #- export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-      #- make test
+      - make -f MPI.mk && make -f MPI.mk test
 
-    # - name: native_cpp_mpi
-    #   before_install: 
-    #   - sudo apt-get update
-    #   - sudo apt-get -y install build-essential python3 python3-dev python3-pip mpich libmpich-dev
-    #   script: 
-    #   - python3 -m pip install -U numpy pandas pybind11
-    #   - make -f MPI.mk
-    #   - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-    #   - make -f MPI.mk test
+    - name: venv_py36
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+      before_install: 
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential python3.6 python3.6-dev python3-pip python3.6-venv mpich libmpich-dev
+      script:
+      - virtualenv -p python3.6 .venv
+      - source .venv/bin/activate
+      - pip install -U numpy pandas pybind11
+      - make && make test
+      - make -f MPI.mk && make -f MPI.mk test
 
     # - name: cmake
     #   addons:
@@ -71,6 +72,9 @@ matrix:
 
     - language: python
       python: 3.5
+      before_install:
+      - sudo apt-get update
+      - sudo apt-get -y install build-essential mpich libmpich-dev
       script:
       - pip install -U numpy pandas pybind11 
       - python setup.py build
@@ -81,9 +85,8 @@ matrix:
       before_install:
       - sudo apt-get update
       - sudo apt-get -y install build-essential mpich libmpich-dev
-      install:
-      - pip install pybind11 numpy pandas
       script:
+      - pip install -U pybind11 numpy pandas
       - python setup.py build
       - ./run_example.sh hello_world
       - ./run_example.sh diagnostics
