--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ matrix:
         conda config --add channels conda-forge
         conda update -q conda
         conda install -q conda-build
-        conda create -q -n test-environment python=$CONDA
+        conda create -q -n test-environment python=3.6
         source activate test-environment      
       install:
         - conda install gxx_linux-64 openmpi numpy pandas pybind11
